test/sematest/invalid/multiple_static_methods.java
class A {
    public static void main(String[] args) {}
    public static void alsoStaticButNotMain(String[] args) {}
}
